Fixed horizontal overflow

--- a/css/battle.css
+++ b/css/battle.css
@@ -33,6 +33,12 @@ a {
 
 img {
   border: none;
+  max-width: 100%;
+  height: auto;
+}
+
+iframe {
+  max-width: 100%;
 }
 
 body > main {
