--- a/scss/shareprogress-overrides.scss
+++ b/scss/shareprogress-overrides.scss
@@ -8,6 +8,7 @@
 			left: 0px;
 			width: 100%;
 			height: 100%;
+			padding: 0;
 		}
 	}
 }
